log

Thu 14 Mar 2024 08:34:59 PM UTC: 
 exercises.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 10/70
e34e920
Thu 14 Mar 2024 08:36:53 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
460f83d
Thu 14 Mar 2024 08:41:57 PM UTC: 
 exercises.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:52:7: error: array size missing in ‘newArray’
   52 |   int newArray[];
      |       ^~~~~~~~
exercises.c:62:10: error: function returns address of local variable [-Werror=return-local-addr]
   62 |   return newArray;
      |          ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
523d49b
Thu 14 Mar 2024 08:43:43 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
ea7d23a
Thu 14 Mar 2024 08:45:31 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 20/70
12d3d35
Thu 14 Mar 2024 08:45:45 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:66:10: error: returning ‘int’ from a function with return type ‘int *’ makes pointer from integer without a cast [-Werror=int-conversion]
   66 |   return *newArray;
      |          ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
300af85
Thu 14 Mar 2024 08:46:05 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|5
total_score: 20/70
3dbf448
